@@ -156,8 +156,7 @@ class NCPackageSelector
     bool autoCheck;                     // dependency check on every 'click'
     bool verifySystem;                  // system verification mode
     bool installRecommended;            // option install recommended packages
-    bool installAlreadyRecommended;     // option install recommended for already installed packages
-    
+
     std::string actionAtExit;
 
     YRpmGroupsTree * _rpmGroupsTree;	// rpm groups of the found packages
@@ -340,17 +339,13 @@ class NCPackageSelector
     void setAllowVendorChange( bool on );
 
     //
-    // The solver options 'Install recommended for already installed' and
+    // The solver options 'Install recommended packages' and
     // 'verify system' can be changed in UI and are written to /etc/sysconfig/yast2.
     //
     bool isInstallRecommended();
     void setInstallRecommended( bool on );
     bool InstallRecommended() { return installRecommended; }
 
-    bool isInstallAlreadyRecommended();
-    void setInstallAlreadyRecommended( bool on );
-    bool InstallAlreadyRecommended() { return installAlreadyRecommended; }
-    
     bool isVerifySystem();
     void setVerifySystem( bool on );
     bool VerifySystem() { return verifySystem; }
