@@ -68,7 +68,6 @@ public:
     YMenuItem *verifySystem;
     YMenuItem *verifySystemOpt;
     YMenuItem *installRecommendedOpt;
-    YMenuItem *installAlreadyRecommendedOpt;
     YMenuItem *cleanDepsOnRemove;
     YMenuItem *allowVendorChange;
     YMenuItem *testCase;	
@@ -89,8 +88,6 @@ public:
     bool setCleanDepsOnRemove();
 
     bool setInstallRecommended();
-
-    bool setInstallAlreadyRecommended();
 
     bool setAllowVendorChange();
 
